Internal updates for better compatibility with OH bindings
Signed-off-by: Chris Jackson <chris@cd-jackson.com>